--- a/example/test/views/test/sub1/sub2/test1.scala.html
+++ b/example/test/views/test/sub1/sub2/test1.scala.html
@@ -1,20 +1,6 @@
-@* name policy: not xyz.test.scala.html
-
-no dots and no - becaus it is compiled to an JVM class
-
-must be in test/views
-
-*@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>QUnit</title>
-    <link rel="stylesheet" href="/@@qunit?asset=qunit.css">
-</head>
-<body>
-<div id="qunit"></div>
-<script src="/@@qunit?asset=qunit.js"></script>
-<script src="/public/sub1/test-file-sub1-with-html.test.js"></script>
-</body>
-</html>
+@qunit.test {
+    @* stuff for header *@
+    <script src="/public/sub1/test-file-sub1-with-html.test.js"></script>
+} {
+    <div>stuff in body</div>
+}
