simplified template helper

--- a/example/test/views/test/sub1/sub2/test1.scala.html
+++ b/example/test/views/test/sub1/sub2/test1.scala.html
@@ -1,6 +1,4 @@
 @qunit.test {
-    @* stuff for header *@
     <script src="/public/sub1/test-file-sub1-with-html.test.js"></script>
-} {
-    <div>stuff in body</div>
+    <div id="some-element">stuff in body</div>
 }
