--- a/plugin/app/views/qunit/test.scala.html
+++ b/plugin/app/views/qunit/test.scala.html
@@ -1,4 +1,4 @@
-@(head: Html)(body: Html = Html.empty)
+@(body: Html = Html.empty)
 
 <!DOCTYPE html>
 <html>
@@ -7,7 +7,6 @@
     <title>QUnit</title>
     <link rel="stylesheet" href="/@@qunit?asset=qunit.css">
     <script src="/@@qunit?asset=qunit.js"></script>
-    @head
 </head>
 <body>
     <div id="qunit"></div>
