moved coffeescript compiling to browser, compiling with SBT didn't hot reload

--- a/plugin/app/views/qunit/test.scala.html
+++ b/plugin/app/views/qunit/test.scala.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <title>QUnit</title>
     <link rel="stylesheet" href="/@@qunit?asset=qunit.css">
+    <script src="/@@qunit?asset=coffee-script.js"></script>
     <script src="/@@qunit?asset=qunit.js"></script>
 @* test mode does not work with testresult,js *@
 @if(!isTest) {
