--- a/example/test/views/test/sub1/sub2/test1.scala.html
+++ b/example/test/views/test/sub1/sub2/test1.scala.html
@@ -1,3 +1,3 @@
 @qunit.test {
-    <script src="/public/sub1/test-file-sub1-with-html.test.js"></script>
+    @qunit.script("sub1/test-file-sub1-with-html.test.coffee")
 }
