moved assets to subpackages

--- a/plugin/app/views/qunit/index.scala.html
+++ b/plugin/app/views/qunit/index.scala.html
@@ -9,13 +9,13 @@
     <head>
         <title>@title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="/@@qunit?asset=qunit.css" />
-    <link rel="stylesheet" href="/@@qunit?asset=testrunner.css" />
+    <link rel="stylesheet" href="/@@qunit?asset=stylesheets/qunit.css" />
+    <link rel="stylesheet" href="/@@qunit?asset=stylesheets/testrunner.css" />
 
-        <script src="/@@qunit?asset=json2.js" type="text/javascript" charset="utf-8"></script>
-        <script src="/@@qunit?asset=jquery-1.6.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="/@@qunit?asset=jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="/@@qunit?asset=testrunner.js" charset="utf-8"></script>
+        <script src="/@@qunit?asset=javascripts/json2.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/@@qunit?asset=javascripts/jquery-1.6.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/@@qunit?asset=javascripts/jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="/@@qunit?asset=javascripts/testrunner.js" charset="utf-8"></script>
     </head>
     <body>
         <div id="header" class="block">
