--- a/plugin/app/views/qunit/test.scala.html
+++ b/plugin/app/views/qunit/test.scala.html
@@ -8,12 +8,12 @@
 <head>
     <meta charset="utf-8">
     <title>QUnit</title>
-    <link rel="stylesheet" href="/@@qunit?asset=qunit.css">
-    <script src="/@@qunit?asset=coffee-script.js"></script>
-    <script src="/@@qunit?asset=qunit.js"></script>
+    <link rel="stylesheet" href="/@@qunit?asset=stylesheets/qunit.css">
+    <script src="/@@qunit?asset=javascripts/coffee-script.js"></script>
+    <script src="/@@qunit?asset=javascripts/qunit.js"></script>
 @* test mode does not work with testresult,js *@
 @if(!isTest) {
-    <script src="/@@qunit?asset=testresult.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/@@qunit?asset=javascripts/testresult.js" type="text/javascript" charset="utf-8"></script>
 }
 </head>
 <body>
