add to demo real CS/JS files with code, close #22

--- a/demo/test/views/subfolder/testInJavaScript.scala.html
+++ b/demo/test/views/subfolder/testInJavaScript.scala.html
@@ -1,3 +1,4 @@
 @qunit.test {
+    <script src="@routes.Assets.at("javascripts/static.js")" type="text/javascript"></script>
     @qunit.script("qunit/subfolder/testInJavaScript.js")
 }
