--- a/demo/test/views/testInCoffeeScript.scala.html
+++ b/demo/test/views/testInCoffeeScript.scala.html
@@ -1,3 +1,4 @@
 @qunit.test {
+    <script src="@routes.Assets.at("javascripts/main.min.js")" type="text/javascript"></script>
     @qunit.script("qunit/testInCoffeeScript.coffee")
 }
