--- a/plugin/app/views/qunit/script.scala.html
+++ b/plugin/app/views/qunit/script.scala.html
@@ -1,3 +1,3 @@
 @(fileName: String)
 
-<script @if(fileName.endsWith("coffee")){type="text/coffeescript"} src="/@@qunit?testFile=@fileName"></script>
+<script src="/@@qunit?testFile=@(if(fileName.endsWith(".coffee")) fileName.replaceAll("coffee$","precompiled.js") else fileName)"></script>
