migration to jquery-1.9.1

--- a/plugin/app/views/qunit/index.scala.html
+++ b/plugin/app/views/qunit/index.scala.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/@@qunit?asset=stylesheets/testrunner.css" />
 
         <script src="/@@qunit?asset=javascripts/json2.js" type="text/javascript" charset="utf-8"></script>
-        <script src="/@@qunit?asset=javascripts/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/@@qunit?asset=javascripts/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="/@@qunit?asset=javascripts/jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="/@@qunit?asset=javascripts/testrunner.js" charset="utf-8"></script>
     </head>
