--- a/plugin/app/views/qunit/test.scala.html
+++ b/plugin/app/views/qunit/test.scala.html
@@ -10,7 +10,7 @@
     <title>QUnit</title>
     <link rel="stylesheet" href="/@@qunit?asset=stylesheets/qunit.css">
     <script src="/@@qunit?asset=javascripts/coffee-script.js"></script>
-    <script src="/@@qunit?asset=javascripts/jquery-1.7.1.min.js"></script>
+    <script src="/@@qunit?asset=javascripts/jquery.min.js"></script>
     <script src="/@@qunit?asset=javascripts/qunit.js"></script>
 @* test mode does not work with testresult,js *@
 @if(!isTest) {
