--- a/testProject/test/views/test/sub1/sub2/test1.scala.html
+++ b/testProject/test/views/test/sub1/sub2/test1.scala.html
@@ -1,3 +1,3 @@
-@qunit.test {
-    @qunit.script("sub1/test-file-sub1-with-html.test.coffee")
+@qunitTest {
+    @qunitScript("sub1/test-file-sub1-with-html.test.coffee")
 }
