--- a/plugin/app/views/qunit/test.scala.html
+++ b/plugin/app/views/qunit/test.scala.html
@@ -8,8 +8,8 @@
 <head>
     <meta charset="utf-8">
     <title>QUnit</title>
-    <link rel="stylesheet" href="/@@qunit?asset=stylesheets/qunit.css">
-    <script src="/@@qunit?asset=javascripts/qunit.js"></script>
+    <link rel="stylesheet" href="@controllers.qunit.routes.Assets.at("stylesheets/qunit.css")">
+    <script src="@controllers.qunit.routes.Assets.at("javascripts/qunit.js")"></script>
 </head>
 <body>
     <div id="qunit"></div>
