update demo for 0.6-SNAPSHOT

--- a/demo/test/views/testInCoffeeScript.scala.html
+++ b/demo/test/views/testInCoffeeScript.scala.html
@@ -1,4 +1,4 @@
-@qunit.test {
+@qunitTest {
     <script src="@routes.Assets.at("javascripts/main.min.js")" type="text/javascript"></script>
-    @qunit.script("qunit/testInCoffeeScript.coffee")
+    @qunitScript("qunit/testInCoffeeScript.coffee")
 }
