--- a/demo/test/views/subfolder/testInJavaScript.scala.html
+++ b/demo/test/views/subfolder/testInJavaScript.scala.html
@@ -1,4 +1,4 @@
-@qunit.test {
+@qunitTest {
     <script src="@routes.Assets.at("javascripts/static.js")" type="text/javascript"></script>
-    @qunit.script("qunit/subfolder/testInJavaScript.js")
+    @qunitScript("qunit/subfolder/testInJavaScript.js")
 }
